force-app/main/default/objects/Student__c/fields/AGE__c.field-meta.xml
<CustomField>
    <fullName>AGE__c</fullName>
    <label>AGE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>