force-app/main/default/objects/Student__c/fields/BRIEF_BIO__c.field-meta.xml
<CustomField>
    <fullName>BRIEF_BIO__c</fullName>
    <label>BRIEF BIO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>