force-app/main/default/objects/Student__c/fields/CAREER_OBJECTIVE__c.field-meta.xml
<CustomField>
    <fullName>CAREER_OBJECTIVE__c</fullName>
    <label>CAREER OBJECTIVE</label>
    <type>TextArea</type>
</CustomField>