force-app/main/default/objects/Student__c/fields/CLASS__c.field-meta.xml
<CustomField>
    <fullName>CLASS__c</fullName>
    <label>CLASS</label>
    <referenceTo>CLASS__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>