force-app/main/default/objects/Student__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <label>EMAIL</label>
    <type>Email</type>
</CustomField>