force-app/main/default/objects/Student__c/fields/ENROLLED_FULL_TIME__c.field-meta.xml
<CustomField>
    <fullName>ENROLLED_FULL_TIME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ENROLLED FULL TIME</label>
    <type>Checkbox</type>
</CustomField>