force-app/main/default/objects/Student__c/fields/ENTRANCE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>ENTRANCE_SCORE__c</fullName>
    <label>ENTRANCE SCORE</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>