force-app/main/default/objects/Student__c/fields/FATHER_NAME__c.field-meta.xml
<CustomField>
    <fullName>FATHER_NAME__c</fullName>
    <label>FATHER NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>