force-app/main/default/objects/Student__c/fields/MOTHER_NAME__c.field-meta.xml
<CustomField>
    <fullName>MOTHER_NAME__c</fullName>
    <label>MOTHER NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>