force-app/main/default/objects/Student__c/fields/PASSOUT__c.field-meta.xml
<CustomField>
    <fullName>PASSOUT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PASSOUT?</label>
    <type>Checkbox</type>
</CustomField>