force-app/main/default/objects/Student__c/fields/PHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PHONE_NUMBER__c</fullName>
    <label>PHONE  NUMBER</label>
    <type>Phone</type>
</CustomField>