force-app/main/default/objects/Student__c/fields/RESUME__c.field-meta.xml
<CustomField>
    <fullName>RESUME__c</fullName>
    <label>RESUME</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>