force-app/main/default/objects/Student__c/fields/SALESFORCE_ROLE__c.field-meta.xml
<CustomField>
    <fullName>SALESFORCE_ROLE__c</fullName>
    <label>SALESFORCE ROLE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADMIN</fullName>
            </value>
            <value>
                <fullName>DEVELOPER</fullName>
            </value>
            <value>
                <fullName>QUALITY ANALYST</fullName>
            </value>
            <value>
                <fullName>BUSINESS ANALYST</fullName>
            </value>
            <value>
                <fullName>ARCHITECT</fullName>
            </value>
            <value>
                <fullName>PROJECT MANGER</fullName>
            </value>
            <value>
                <fullName>ASSOCIATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>