force-app/main/default/objects/Student__c/fields/SALESFORCE_SKILL_SET__c.field-meta.xml
<CustomField>
    <fullName>SALESFORCE_SKILL_SET__c</fullName>
    <label>SALESFORCE SKILL SET</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SALESFORCE_ROLE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Concepts</fullName>
            </value>
            <value>
                <fullName>Data Security</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Test Class</fullName>
            </value>
            <value>
                <fullName>Async Apex</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Smartsheets</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Lucid Chart</fullName>
            </value>
            <value>
                <fullName>G Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>