force-app/main/default/objects/Student__c/fields/STREAM__c.field-meta.xml
<CustomField>
    <fullName>STREAM__c</fullName>
    <label>STREAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARTS</fullName>
            </value>
            <value>
                <fullName>COMMERCE</fullName>
            </value>
            <value>
                <fullName>SCIENCE</fullName>
            </value>
            <value>
                <fullName>MANAGEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>