force-app/main/default/objects/Student__c/fields/weekdays__c.field-meta.xml
<CustomField>
    <fullName>weekdays__c</fullName>
    <label>weekdays</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ENROLLED_FULL_TIME__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>weekdays</valueSetName>
    </valueSet>
</CustomField>