force-app/main/default/objects/Student__c/validationRules/CHECK_ENTRANCE_SCORE.validationRule-meta.xml
<ValidationRule>
    <fullName>CHECK_ENTRANCE_SCORE</fullName>
    <active>true</active>
    <description>THE ENTRANCE SCORE SHOULD NOT BE BLANK</description>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Fresher&quot;,
    ISBLANK(ENTRANCE_SCORE__c)
)</errorConditionFormula>
    <errorDisplayField>ENTRANCE_SCORE__c</errorDisplayField>
    <errorMessage>THE ENTRANCE SCORE SHOULD NOT BE BLANK</errorMessage>
</ValidationRule>