force-app/main/default/objects/Student__c/validationRules/PRVENT_NEGATIVE_OR_ZERO_AGE.validationRule-meta.xml
<ValidationRule>
    <fullName>PRVENT_NEGATIVE_OR_ZERO_AGE</fullName>
    <active>true</active>
    <description>THE AGE SHOULD BE GREATHER THAN ZERO</description>
    <errorConditionFormula>AGE__c &lt;=0</errorConditionFormula>
    <errorDisplayField>AGE__c</errorDisplayField>
    <errorMessage>THE AGE SHOULD BE GREATHER THAN ZERO</errorMessage>
</ValidationRule>