force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAME__c</columns>
    <columns>AGE__c</columns>
    <columns>MOTHER_NAME__c</columns>
    <columns>EMAIL__c</columns>
    <columns>CLASS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>