force-app/main/default/objects/Student__c/listViews/ALL_FRESHERS.listView-meta.xml
<ListView>
    <fullName>ALL_FRESHERS</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student__c.Fresher</value>
    </filters>
    <label>ALL FRESHERS</label>
</ListView>